k8s-yamls-master/k8s-yamls-master/old-archive/gravitee-lab/apim/svc-api-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-dev
spec:
  ports:
  - name: gateway
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: gio
    app.kubernetes.io/name: apim3
  type: ClusterIP
