k8s-yamls-master/k8s-yamls-master/old-archive/gravitee-lab/apim/gravitee-dev.yaml
---
# Source: apim3/templates/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gio-apim3-api
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10-mi1.0.34"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 83
      targetPort: 8083
      protocol: TCP
      
      
      appProtocol: http
      
      
      name: api
  selector:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/component: "api"
---
# Source: apim3/templates/gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gio-apim3-gateway
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10-mi1.0.34"
    app.kubernetes.io/component: "gateway"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 82
      targetPort: 8082
      protocol: TCP
      
      appProtocol: http
      
      name: gateway
  selector:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/component: "gateway"
---
# Source: apim3/templates/portal/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gio-apim3-portal
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10"
    app.kubernetes.io/component: "portal"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 8003
      targetPort: 8080
      protocol: TCP
      
      appProtocol: http
      
      name: portal
  selector:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/component: "portal"
---
# Source: apim3/templates/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gio-apim3-ui
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 8002
      targetPort: 8080
      protocol: TCP
      
      appProtocol: http
      
      name: ui
  selector:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/component: "ui"
---
# Source: apim3/templates/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-apim3-api
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10-mi1.0.34"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  replicas: 3
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim3
      app.kubernetes.io/instance: gio
      app.kubernetes.io/component: "api"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: a5ca9872b2a4f453576096f07376964ca7396410bb4e9a082a408ab96a7ee6f5
      labels:
        app.kubernetes.io/name: apim3
        app.kubernetes.io/instance: gio
        app.kubernetes.io/version: "3.20.10-mi1.0.34"
        app.kubernetes.io/component: "api"
    spec:
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: gio-apim3-api
          image: "docker-local.artifactory.medimpact.com/graviteeio/apim-management-api:3.20.10-mi1.0.34"
          imagePullPolicy: IfNotPresent
          securityContext: 
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          ports:
            - name: http
              containerPort: 8083
            - name: api-techapi
              containerPort: 18083
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 10"]
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            tcpSocket:
              port: http
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: http

          resources: 
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 150m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /opt/graviteeio-management-api/config/gravitee.yml
              subPath: gravitee.yml            
            - name: config
              mountPath: /opt/graviteeio-management-api/config/logback.xml
              subPath: logback.xml
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault   
      volumes:
        - name: config
          configMap:
            name: gio-apim3-api
---
# Source: apim3/templates/gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-apim3-gateway
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10-mi1.0.34"
    app.kubernetes.io/component: "gateway"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: apim3
      app.kubernetes.io/instance: gio
      app.kubernetes.io/component: "gateway"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: 633748da3abfc0bf35156d7875d72f677ea997065225b950bf4f0003f144631c
      labels:
        app.kubernetes.io/name: apim3
        app.kubernetes.io/instance: gio
        app.kubernetes.io/version: "3.20.10-mi1.0.34"
        app.kubernetes.io/component: "gateway"
    spec:
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: gio-apim3-gateway
          image: "docker-local.artifactory.medimpact.com/graviteeio/apim-gateway:3.20.10-mi1.0.34"
          imagePullPolicy: IfNotPresent
          securityContext: 
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          ports:
            - name: http
              containerPort: 8082
            - name: gateway-techapi
              containerPort: 18082
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 10"]
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
              - name: Authorization
                value: Basic YWRtaW46YWRtaW5hZG1pbg==
              path: /_node/health?probes=http-server
              port: 18082
              scheme: HTTP
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 2
            httpGet:
              httpHeaders:
              - name: Authorization
                value: Basic YWRtaW46YWRtaW5hZG1pbg==
              path: /_node/health?probes=api-sync
              port: 18082
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          startupProbe:
            failureThreshold: 29
            httpGet:
              httpHeaders:
              - name: Authorization
                value: Basic YWRtaW46YWRtaW5hZG1pbg==
              path: /_node/health?probes=http-server
              port: 18082
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: 
            limits:
              cpu: 2000m
              memory: 3840Mi
            requests:
              cpu: 100m
              memory: 2560Mi
          volumeMounts:
            - name: config
              mountPath: /opt/graviteeio-gateway/config/gravitee.yml
              subPath: gravitee.yml            
            - name: config
              mountPath: /opt/graviteeio-gateway/config/logback.xml
              subPath: logback.xml
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          configMap:
            name: gio-apim3-gateway
---
# Source: apim3/templates/portal/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-apim3-portal
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10"
    app.kubernetes.io/component: "portal"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  replicas: 3
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim3
      app.kubernetes.io/instance: gio
      app.kubernetes.io/component: "portal"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: 6f894ee399e11e8032897176e1367e832b9517cb192106fe8f0039ab0cf7e6d5
      labels:
        app.kubernetes.io/name: apim3
        app.kubernetes.io/instance: gio
        app.kubernetes.io/version: "3.20.10"
        app.kubernetes.io/component: "portal"
    spec:
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: gio-apim3-portal
          image: "docker-local.artifactory.medimpact.com/graviteeio/apim-portal-ui:3.20.10"
          imagePullPolicy: IfNotPresent
          securityContext: 
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources: 
            limits:
              cpu: 1000m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/assets/config.json
              subPath: config.json
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          configMap:
            name: gio-apim3-portal
---
# Source: apim3/templates/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-apim3-ui
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
spec:
  replicas: 3
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim3
      app.kubernetes.io/instance: gio
      app.kubernetes.io/component: "ui"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: cf0e5962346ef138f582750a9e501926018cd2044893df9d4617ef83aecff44d
      labels:
        app.kubernetes.io/name: apim3
        app.kubernetes.io/instance: gio
        app.kubernetes.io/version: "3.20.10"
        app.kubernetes.io/component: "ui"
      annotations:
    spec:
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: gio-apim3-ui
          image: "docker-local.artifactory.medimpact.com/graviteeio/apim-management-ui:3.20.10"
          imagePullPolicy: IfNotPresent
          securityContext: 
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources: 
            limits:
              cpu: 1000m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/constants.json
              subPath: constants.json
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          configMap:
            name: gio-apim3-ui
---
# Source: apim3/templates/api/api-ingress-management.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gio-apim3-api-management
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10-mi1.0.34"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
    
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\nproxy_pass_header if-match;\n"
spec:
  ingressClassName: nginx
  rules:
  - host: gio-lab.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /management
        backend:
          service:
            name: gio-apim3-api
            port:
              number: 83
          
  tls:
    - hosts:
      - gio-lab.medimpact.com
---
# Source: apim3/templates/api/api-ingress-portal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gio-apim3-api-portal
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10-mi1.0.34"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
    
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\nproxy_set_header if-match \"\";\n"
spec:
  ingressClassName: nginx
  rules:
  - host: gio-lab.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /portal
        backend:
          service:
            name: gio-apim3-api
            port:
              number: 83
          
  tls:
    - hosts:
      - gio-lab.medimpact.com
---
# Source: apim3/templates/portal/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gio-apim3-portal
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10"
    app.kubernetes.io/component: "portal"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
    
      # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\n"
spec:
  ingressClassName: nginx
  rules:
  - host: gio-lab.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gio-apim3-portal
            port:
              number: 8003
          
  tls:
    - hosts:
      - gio-lab.medimpact.com
---
# Source: apim3/templates/ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gio-apim3-ui
  labels:
    app.kubernetes.io/name: apim3
    app.kubernetes.io/instance: gio
    app.kubernetes.io/version: "3.20.10"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim3-3.2.0
  annotations:
    
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\nsub_filter_once on;\nsub_filter  '<base href=\"/' '<base href=\"/console/';"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1$2"
spec:
  ingressClassName: nginx
  rules:
  - host: gio-lab.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /console(/|$)(.*)
        backend:
          service:
            name: gio-apim3-ui
            port:
              number: 8002
          
  tls:
    - hosts:
      - gio-lab.medimpact.com
